Add mock data for carmodel+change id from int to guid - to be able to add migrations and run proj

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=3306;Database=MSB-Database;User=root;Password=Robert123;"
+    "DefaultConnection": "Server=localhost;port=3306;Database=MSB;User=root;Password=MyRoot123;"
   },
 
   "Logging": {
