--- a/.github/workflows/Pull-request.yml
+++ b/.github/workflows/Pull-request.yml
@@ -6,16 +6,11 @@ on:
 
 jobs:
  deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set line endings to CRLF
-        run: |
-          git config --global core.autocrlf true
-          git config --global core.eol crlf
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
