--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
