made the jwt-token longer

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,7 +2,7 @@
   "JwtSettings": {
     "Issuer": "your-issuer",
     "Audience": "your-audience",
-    "SecretKey": "your-secret-key"
+    "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=mypassword;database=MSB_Database"
