--- a/backend/Domain/Domain.csproj
+++ b/backend/Domain/Domain.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.4" />
     <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
