fixed the reduction of slots in shelf it was bugged

--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,7 +5,7 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=msb_database;user=root;password=passwordword"
+    "DefaultConnection": "server=localhost;database=MSB_Database;user=root;password=mypassword"
   },
   "Logging": {
     "LogLevel": {
