--- a/backend/Infrastructure/Infrastructure.csproj
+++ b/backend/Infrastructure/Infrastructure.csproj
@@ -38,10 +38,10 @@
     <None Remove="Services\Notification\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Resources\" />
     <Folder Include="Repositories\EmployeeRepo\" />
     <Folder Include="Repositories\CarRepo\" />
-    <Folder Include="Services\Notification\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Interop.bpac">
