Mended my Commit N29 All should be working from here

--- a/backend/Infrastructure/Infrastructure.csproj
+++ b/backend/Infrastructure/Infrastructure.csproj
@@ -38,6 +38,7 @@
     <None Remove="Services\Notification\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Resources\" />
     <Folder Include="Repositories\EmployeeRepo\" />
     <Folder Include="Repositories\CarRepo\" />
