--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,8 +5,8 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=MSB_Database;user=root;password=mypassword"
-  },
+    "DefaultConnection": "server=localhost;port=3307;uid=root;pwd=root;database=MSB_Database"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
