--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,4 @@
     startCommand: "dotnet run --no-launch-profile --urls=http://0.0.0.0:8080"
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: MSB_Database
-          property: connectionString
+        value: "mysql://root:mypassword@localhost:3306/MSB_Database"
