--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 ﻿services:
   - type: web
     name: my-dotnet-backend
-    runtime: dotnet
     env: production
-    branch: main
+    branch: development
     buildCommand: "dotnet build"
     startCommand: "dotnet run --no-launch-profile --urls=http://0.0.0.0:8080"
     envVars:
