--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,13 +5,21 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=MSB_Database;user=root;password=mypassword"
+    "DefaultConnection": "server=localhost;database=MSB_Database;user=root;password=passwordword"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "StripeSettings": {
+    "SecretKey": "sk_test_wABnguMyd6lSMOYZNgp7HUQe",
+    "PublishableKey": "pk_test_erJ09UON7JgRje7RafKvywkw"
+  },
+  "DeTrack": {
+    "ApiKey": "82bda61696ed0e18e602815949bd70b130bf9be3f7592d53",
+    "BaseUrl": "https://app.detrack.com"
   },
   "AllowedHosts": "*"
 }
