--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,7 +5,7 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=mypassword;database=MSB_Database"
+    "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=Megan1234;database=msb_database"
   },
   "Logging": {
     "LogLevel": {
