--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,7 +5,7 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=mypassword1;database=MSB_Database"
+    "DefaultConnection": "server=localhost;port=3307;uid=root;pwd=root;database=MSB_Database"
   },
   "Logging": {
     "LogLevel": {
