--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,12 @@
     dockerfilePath: ./Dockerfile
     envVars:
       - key: DB_HOST
+        value: ${DB_HOST}  # or the actual value if you're hardcoding it
       - key: DB_NAME
+        value: ${DB_NAME}
       - key: DB_USER
+        value: ${DB_USER}
       - key: DB_PASSWORD
+        value: ${DB_PASSWORD}
       - key: DB_PORT
+        value: ${DB_PORT}
