--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,7 +5,7 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=${DB_HOST};Port=${DB_PORT:-3306};Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};"
+    "DefaultConnection": "Server=${DB_HOST};Port=3306;Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};"
     
 
 
