changed to hardcode string

--- a/backend/API/appsettings.json
+++ b/backend/API/appsettings.json
@@ -5,7 +5,7 @@
     "SecretKey": "ASecretKeyThatNoneWillSeeComming"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=${DB_HOST};Port=3306;Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};"
+    "DefaultConnection": "Server=msb-db.c5sw08y6eigc.eu-north-1.rds.amazonaws.com;Port=3306;Database=msb-db;Uid=admin;Pwd=Magnificentthings56;"
     
 
 
